--- a/SkateboardingSim/Config/DefaultEngine.ini
+++ b/SkateboardingSim/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=SkateboardingSim
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Maps/TestMap.TestMap
+GameDefaultMap=/Game/Maps/TestMap.TestMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
